Complete basic drumkit

--- a/index.html
+++ b/index.html
@@ -6,11 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drum-kit</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="container">
-        
+        <div id="drum-kit">
+            <h1>Drum Kit</h1>
+            <p>Type the keyboard letters shown below</p>
+            <div id="key-input">
+                <button>Q</button>
+                <button>W</button>
+                <button>E</button>
+                <button>A</button>
+                <button>S</button>
+                <button>D</button>
+                <button>Z</button>
+                <button>X</button>
+                <button>C</button>
+            </div>
+        </div>
     </div>
+    <audio id="key-81" src="sounds/Heater-1.mp3"></audio>
+    <audio id="key-87" src="sounds/Heater-2.mp3"></audio>
+    <audio id="key-69" src="sounds/Heater-3.mp3"></audio> 
+    <audio id="key-65" src="sounds/Heater-4_1.mp3"></audio>
+    <audio id="key-83" src="sounds/Heater-6.mp3"></audio>
+    <audio id="key-68" src="sounds/Dsc_Oh.mp3"></audio>
+    <audio id="key-90" src="sounds/Kick_n_Hat.mp3"></audio>
+    <audio id="key-88" src="sounds/RP4_KICK_1.mp3"></audio>
+    <audio id="key-67" src="sounds/Cev_H2.mp3"></audio>
 </body>
 </html>
