Add button transition animation

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <h1>Drum Kit</h1>
             <p>Type the keyboard letters shown below</p>
             <div id="key-input">
-                <button>Q</button>
-                <button>W</button>
-                <button>E</button>
-                <button>A</button>
-                <button>S</button>
-                <button>D</button>
-                <button>Z</button>
-                <button>X</button>
-                <button>C</button>
+                <button id="key-81">Q</button>
+                <button id="key-87">W</button>
+                <button id="key-69">E</button>
+                <button id="key-65">A</button>
+                <button id="key-83">S</button>
+                <button id="key-68">D</button>
+                <button id="key-90">Z</button>
+                <button id="key-88">X</button>
+                <button id="key-67">C</button>
             </div>
         </div>
     </div>
